2001-02-16  Gene Z. Ragan  <gzr@eazel.com>

	reviewed by: Mike Enger <engber@eazel.com>
	
	Fixed bug 6624, Selected mime type/description displayed
	below the list is incorrect after reverting to system defaults.
	
	Fixed bug 6644, List sorting after using "revert to system defaults"
	is inconsistent.
	
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(revert_real_cb):
	Sort the list using current sort column and select the
	first item to force an update of the dialog contents.
	Also freeze and thaw list to avoid annoying flicker while
	list is being repopulated.

2001-02-16  John Sullivan  <sullivan@eazel.com>

	reviewed by: Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 6635 (in MIME capplet, descriptions can't be
	edited though they look editable)

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	* libgnomevfs/gnome-vfs-mime-handlers.h:
	(gnome_vfs_mime_set_description): New function,
	just like existing _set_icon.

	* mime-type-capplet/nautilus-mime-type-capplet.h:
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(nautilus_mime_type_capplet_update_mime_list_icon_and_description):
	Changed name to add the _and_description part. It already handled
	the description properly but the name was misleading.
	(really_change_icon): Updated for name change.
	(update_description_from_input): New function, sets the description
	in database and UI (list) from what's in the field.
	(description_entry_changed): Set dirty flag.
	(description_entry_activate), (description_entry_lost_focus):
	If dirty flag set, update. 
	(init_mime_capplet): Hook up text field signal handlers, make
	field editable, remove "No Description" case since putting status
	text in editable field is wrong.
	(nautilus_mime_type_capplet_update_info): Clear dirty flag
	when description is updated due to selection change.

	* mime-type-capplet/nautilus-mime-type-icon-entry.c:
	(icon_selected_cb): Updated for name change.

2001-02-16  Gene Z. Ragan  <gzr@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>